# TV-Wall

./: README.md
conf/: client1.conf  client2.conf  client3.conf  client4.conf  server.conf
doc/: Results.xlsx
src/: Makefile.am  client.c  client.h  server.c  server.h  tvw_client.c  tvw_server.c
src/common/: gst_utils.c  gst_utils.h  utils.c  utils.h
